--- a/examples/dashboard/webapp/view/SingleKeyMetric.view.xml
+++ b/examples/dashboard/webapp/view/SingleKeyMetric.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="cds.plugin.caching.dashboard.controller.SingleStatistic"
+<mvc:View controllerName="cds.plugin.caching.dashboard.controller.SingleKeyMetric"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:core="sap.ui.core"
@@ -14,11 +14,11 @@
 		formatter: 'cds/plugin/caching/dashboard/model/formatter'
 	}">
 
-	<f:DynamicPage title="Statistic Details" showFooter="false">
+	<f:DynamicPage title="Key Metric Details" showFooter="false">
 		<f:title>
 			<f:DynamicPageTitle>
 				<f:heading>
-					<Title text="Statistic: {ui>/statisticId}" />
+					<Title text="Key: {ui>/keyName}" />
 				</f:heading>
 				<f:actions>
 					<Button icon="sap-icon://refresh" text="Refresh" type="Transparent" press="onRefresh" />
@@ -32,20 +32,130 @@
 		</f:title>
 
 		<f:content>
-			<cssgrid:CSSGrid id="mainGrid" width="100%">
+			<cssgrid:CSSGrid id="keyMetricMainGrid" width="100%">
 				<cssgrid:customLayout>
 					<cssgrid:ResponsiveColumnLayout />
 				</cssgrid:customLayout>
 
-				        <!-- Read-Through Performance Section -->
+				<!-- Key Information Section -->
 				<VBox renderType="Bare">
 					<layoutData>
 						<cssgrid:ResponsiveColumnItemLayoutData columns="24"/>
 					</layoutData>
 
-					                <Title text="Read-Through Performance" titleStyle="H5" class="sapUiMediumMarginTop sapUiTinyMarginBottom" />
+					<Title text="Key Information" titleStyle="H5" class="sapUiMediumMarginTop sapUiTinyMarginBottom" />
 
-					<f:GridContainer id="cacheThroughGrid" columnsChange=".onColumnsChange">
+					<f:GridContainer id="keyInfoGrid" columnsChange=".onColumnsChange">
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Key Name" subheader="Cache Key">
+							<TileContent>
+								<NumericContent value="{ui>/keyName}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Operation Type" subheader="Access Pattern">
+							<TileContent>
+								<NumericContent value="{ui>/operationType}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Operations" subheader="Cache Service Operations">
+							<TileContent>
+								<NumericContent value="{ui>/operation}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Data Type" subheader="Content Type">
+							<TileContent>
+								<NumericContent value="{ui>/dataType}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Service Name" subheader="Source Service">
+							<TileContent>
+								<NumericContent value="{ui>/serviceName}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Entity Name" subheader="Data Entity">
+							<TileContent>
+								<NumericContent value="{ui>/entityName}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Last Access" subheader="Most Recent Access">
+							<TileContent>
+								<NumericContent value="{ui>/lastAccess}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="First Access" subheader="Initial Access">
+							<TileContent>
+								<NumericContent value="{ui>/timestamp}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="3" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Tenant" subheader="Tenant Information">
+							<TileContent>
+								<NumericContent value="{ui>/tenant}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="User" subheader="User Information">
+							<TileContent>
+								<NumericContent value="{ui>/user}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+
+						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Locale" subheader="Locale Information">
+							<TileContent>
+								<NumericContent value="{ui>/locale}" withMargin="false" />
+							</TileContent>
+							<layoutData>
+								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
+							</layoutData>
+						</GenericTile>
+					</f:GridContainer>
+				</VBox>
+
+				<!-- Read-Through Performance Section -->
+				<VBox renderType="Bare">
+					<layoutData>
+						<cssgrid:ResponsiveColumnItemLayoutData columns="24"/>
+					</layoutData>
+
+					<Title text="Read-Through Performance" titleStyle="H5" class="sapUiMediumMarginTop sapUiTinyMarginBottom" />
+
+					<f:GridContainer id="keyMetricCacheThroughGrid" columnsChange=".onColumnsChange">
 						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Hit Ratio" subheader="Cache Hit Rate">
 							<TileContent unit="%">
 								<NumericContent valueColor="{formatter: 'formatter.formatHitRatioWithColor', path: 'ui>/hitRatio'}" value="{ path: 'ui>/hitRatio', type: 'sap.ui.model.type.Float', formatOptions: {style: 'short', decimals: 2}}" />
@@ -82,40 +192,9 @@
 							</layoutData>
 						</GenericTile>
 
-						        <!-- Read-Through Distribution Chart -->
-						<f:Card class="sapUiTinyMargin">
-							<f:header>
-								                <card:Header title="Read-Through Operations" subtitle="Hit/Miss/Error Distribution" />
-							</f:header>
-							<f:content>
-								<l:VerticalLayout width="100%">
-									<viz:Popover id="cacheThroughPopOver"></viz:Popover>
-									<viz:VizFrame id="cacheThroughChart" vizType="pie" width="100%" height="300px">
-										<viz:dataset>
-											<viz.data:FlattenedDataset data="{ui>/cacheThroughData}">
-												<viz.data:dimensions>
-													<viz.data:DimensionDefinition name="Operation" value="{operation}" />
-												</viz.data:dimensions>
-												<viz.data:measures>
-													<viz.data:MeasureDefinition name="Count" value="{count}" />
-												</viz.data:measures>
-											</viz.data:FlattenedDataset>
-										</viz:dataset>
-										<viz:feeds>
-											<viz.feeds:FeedItem id="cacheThroughValueAxisFeed" uid="size" type="Measure" values="Count" />
-											<viz.feeds:FeedItem id="cacheThroughCategoryAxisFeed" uid="color" type="Dimension" values="Operation" />
-										</viz:feeds>
-									</viz:VizFrame>
-								</l:VerticalLayout>
-							</f:content>
-							<f:layoutData>
-								<f:GridContainerItemLayoutData columns="4" minRows="4"/>
-							</f:layoutData>
-						</f:Card>
-
 						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Total Requests" subheader="Cache Operations">
 							<TileContent unit="req">
-								<NumericContent value="{= ${ui>/hits} + ${ui>/misses}}" withMargin="false" />
+								<NumericContent value="{ui>/totalRequests}" withMargin="false" />
 							</TileContent>
 							<layoutData>
 								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
@@ -167,16 +246,46 @@
 							</layoutData>
 						</GenericTile>
 
+						<!-- Read-Through Distribution Chart -->
+						<f:Card class="sapUiTinyMargin">
+							<f:header>
+								<card:Header title="Read-Through Operations" subtitle="Hit/Miss/Error Distribution" />
+							</f:header>
+							<f:content>
+								<l:VerticalLayout width="100%">
+									<viz:Popover id="keyMetricCacheThroughPopOver"></viz:Popover>
+									<viz:VizFrame id="keyMetricCacheThroughChart" vizType="pie" width="100%" height="300px">
+										<viz:dataset>
+											<viz.data:FlattenedDataset data="{ui>/cacheThroughData}">
+												<viz.data:dimensions>
+													<viz.data:DimensionDefinition name="Operation" value="{operation}" />
+												</viz.data:dimensions>
+												<viz.data:measures>
+													<viz.data:MeasureDefinition name="Count" value="{count}" />
+												</viz.data:measures>
+											</viz.data:FlattenedDataset>
+										</viz:dataset>
+										<viz:feeds>
+											<viz.feeds:FeedItem id="keyMetricCacheThroughValueAxisFeed" uid="size" type="Measure" values="Count" />
+											<viz.feeds:FeedItem id="keyMetricCacheThroughCategoryAxisFeed" uid="color" type="Dimension" values="Operation" />
+										</viz:feeds>
+									</viz:VizFrame>
+								</l:VerticalLayout>
+							</f:content>
+							<f:layoutData>
+								<f:GridContainerItemLayoutData columns="4" minRows="4"/>
+							</f:layoutData>
+						</f:Card>
 
 						<!-- Latency Chart -->
 						<f:Card class="sapUiTinyMargin">
 							<f:header>
-								                <card:Header title="Latency Comparison" subtitle="Read-Through Latency Metrics" />
+								<card:Header title="Latency Comparison" subtitle="Read-Through Latency Metrics" />
 							</f:header>
 							<f:content>
 								<l:VerticalLayout width="100%">
-									<viz:Popover id="latencyPopOver"></viz:Popover>
-									<viz:VizFrame id="latencyChart" vizType="bar" width="100%" height="300px">
+									<viz:Popover id="keyMetricLatencyPopOver"></viz:Popover>
+									<viz:VizFrame id="keyMetricLatencyChart" vizType="bar" width="100%" height="300px">
 										<viz:dataset>
 											<viz.data:FlattenedDataset data="{ui>/latencyData}">
 												<viz.data:dimensions>
@@ -188,8 +297,8 @@
 											</viz.data:FlattenedDataset>
 										</viz:dataset>
 										<viz:feeds>
-											<viz.feeds:FeedItem id="valueAxisFeed" uid="valueAxis" type="Measure" values="Latency" />
-											<viz.feeds:FeedItem id="categoryAxisFeed" uid="categoryAxis" type="Dimension" values="Operation" />
+											<viz.feeds:FeedItem id="keyMetricValueAxisFeed" uid="valueAxis" type="Measure" values="Latency" />
+											<viz.feeds:FeedItem id="keyMetricCategoryAxisFeed" uid="categoryAxis" type="Dimension" values="Operation" />
 										</viz:feeds>
 									</viz:VizFrame>
 								</l:VerticalLayout>
@@ -246,7 +355,7 @@
 
 					<Title text="Native Function Performance" titleStyle="H5" class="sapUiMediumMarginTop sapUiTinyMarginBottom" />
 
-					<f:GridContainer id="nativeGrid" columnsChange=".onColumnsChange">
+					<f:GridContainer id="keyMetricNativeGrid" columnsChange=".onColumnsChange">
 						<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Native Throughput" subheader="Operations per Second">
 							<TileContent unit="ops/s">
 								<NumericContent value="{ path: 'ui>/nativeThroughput', formatter: 'formatter.formatNumberValue' }" withMargin="false" />
@@ -327,6 +436,7 @@
 								<f:GridContainerItemLayoutData columns="2" minRows="2"/>
 							</layoutData>
 						</GenericTile>
+
 						<!-- Native Function Distribution Chart -->
 						<f:Card class="sapUiTinyMargin">
 							<f:header>
@@ -334,8 +444,8 @@
 							</f:header>
 							<f:content>
 								<l:VerticalLayout width="100%">
-									<viz:Popover id="nativePopOver"></viz:Popover>
-									<viz:VizFrame id="nativeChart" vizType="pie" width="100%" height="300px">
+									<viz:Popover id="keyMetricNativePopOver"></viz:Popover>
+									<viz:VizFrame id="keyMetricNativeChart" vizType="pie" width="100%" height="300px">
 										<viz:dataset>
 											<viz.data:FlattenedDataset data="{ui>/nativeData}">
 												<viz.data:dimensions>
@@ -347,8 +457,8 @@
 											</viz.data:FlattenedDataset>
 										</viz:dataset>
 										<viz:feeds>
-											<viz.feeds:FeedItem id="nativeValueAxisFeed" uid="size" type="Measure" values="Count" />
-											<viz.feeds:FeedItem id="nativeCategoryAxisFeed" uid="color" type="Dimension" values="Operation" />
+											<viz.feeds:FeedItem id="keyMetricNativeValueAxisFeed" uid="size" type="Measure" values="Count" />
+											<viz.feeds:FeedItem id="keyMetricNativeCategoryAxisFeed" uid="color" type="Dimension" values="Operation" />
 										</viz:feeds>
 									</viz:VizFrame>
 								</l:VerticalLayout>
@@ -364,4 +474,4 @@
 		</f:content>
 	</f:DynamicPage>
 
-</mvc:View>
+</mvc:View> 
